# agri-credit-score

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
dashboard/: app.py
docs/: CLAUDE_CODE_SETUP.md  SPEC.md  WORKING_PAPER.md
src/agri_credit_score/: __init__.py  config.py
src/agri_credit_score/api/: main.py  schemas.py
src/agri_credit_score/features/: pipeline.py
src/agri_credit_score/models/: evaluate.py  explain.py  train.py
src/agri_credit_score/synthetic/: archetypes.py  generator.py
tests/: test_api.py  test_cli.py  test_features.py  test_models.py  test_synthetic.py
